exports[`inferType() individual.name 1`] = `
Object {
  "context": Object {
    "type": Object {
      "name": "seq",
      "type": Object {
        "name": "text",
      },
    },
  },
  "name": "pipeline",
  "pipeline": Array [
    Object {
      "context": Object {
        "type": Object {
          "name": "seq",
          "type": Object {
            "entity": "individual",
            "name": "entity",
          },
        },
      },
      "name": "navigate",
      "path": "individual",
    },
    Object {
      "context": Object {
        "type": Object {
          "name": "seq",
          "type": Object {
            "name": "text",
          },
        },
      },
      "name": "navigate",
      "path": "name",
    },
  ],
}
`;

exports[`inferType() individual.name:count() 1`] = `
Object {
  "context": Object {
    "type": Object {
      "name": "number",
    },
  },
  "name": "pipeline",
  "pipeline": Array [
    Object {
      "context": Object {
        "type": Object {
          "name": "seq",
          "type": Object {
            "entity": "individual",
            "name": "entity",
          },
        },
      },
      "name": "navigate",
      "path": "individual",
    },
    Object {
      "context": Object {
        "type": Object {
          "name": "seq",
          "type": Object {
            "name": "text",
          },
        },
      },
      "name": "navigate",
      "path": "name",
    },
    Object {
      "aggregate": "count",
      "context": Object {
        "type": Object {
          "name": "number",
        },
      },
      "name": "aggregate",
    },
  ],
}
`;

exports[`inferType() individual.sample 1`] = `
Object {
  "context": Object {
    "type": Object {
      "name": "seq",
      "type": Object {
        "entity": "sample",
        "name": "entity",
      },
    },
  },
  "name": "pipeline",
  "pipeline": Array [
    Object {
      "context": Object {
        "type": Object {
          "name": "seq",
          "type": Object {
            "entity": "individual",
            "name": "entity",
          },
        },
      },
      "name": "navigate",
      "path": "individual",
    },
    Object {
      "context": Object {
        "type": Object {
          "name": "seq",
          "type": Object {
            "entity": "sample",
            "name": "entity",
          },
        },
      },
      "name": "navigate",
      "path": "sample",
    },
  ],
}
`;

exports[`inferType() individual.sample.title 1`] = `
Object {
  "context": Object {
    "type": Object {
      "name": "seq",
      "type": Object {
        "name": "text",
      },
    },
  },
  "name": "pipeline",
  "pipeline": Array [
    Object {
      "context": Object {
        "type": Object {
          "name": "seq",
          "type": Object {
            "entity": "individual",
            "name": "entity",
          },
        },
      },
      "name": "navigate",
      "path": "individual",
    },
    Object {
      "context": Object {
        "type": Object {
          "name": "seq",
          "type": Object {
            "entity": "sample",
            "name": "entity",
          },
        },
      },
      "name": "navigate",
      "path": "sample",
    },
    Object {
      "context": Object {
        "type": Object {
          "name": "seq",
          "type": Object {
            "name": "text",
          },
        },
      },
      "name": "navigate",
      "path": "title",
    },
  ],
}
`;

exports[`inferType() individual:define(newname := name):select(a := newname, b := name) 1`] = `
Object {
  "context": Object {
    "type": Object {
      "name": "seq",
      "type": Object {
        "fields": Object {
          "a": Object {
            "name": "text",
          },
          "b": Object {
            "name": "text",
          },
        },
        "name": "record",
      },
    },
  },
  "name": "pipeline",
  "pipeline": Array [
    Object {
      "context": Object {
        "type": Object {
          "name": "seq",
          "type": Object {
            "entity": "individual",
            "name": "entity",
          },
        },
      },
      "name": "navigate",
      "path": "individual",
    },
    Object {
      "binding": Object {
        "name": "newname",
        "query": Object {
          "context": Object {
            "type": Object {
              "name": "seq",
              "type": Object {
                "name": "text",
              },
            },
          },
          "name": "pipeline",
          "pipeline": Array [
            Object {
              "context": Object {
                "type": Object {
                  "name": "seq",
                  "type": Object {
                    "name": "text",
                  },
                },
              },
              "name": "navigate",
              "path": "name",
            },
          ],
        },
      },
      "context": Object {
        "type": Object {
          "name": "seq",
          "type": Object {
            "entity": "individual",
            "name": "entity",
          },
        },
      },
      "name": "define",
    },
    Object {
      "context": Object {
        "type": Object {
          "name": "seq",
          "type": Object {
            "fields": Object {
              "a": Object {
                "name": "text",
              },
              "b": Object {
                "name": "text",
              },
            },
            "name": "record",
          },
        },
      },
      "name": "select",
      "select": Object {
        "a": Object {
          "context": Object {
            "type": Object {
              "name": "text",
            },
          },
          "name": "pipeline",
          "pipeline": Array [
            Object {
              "context": Object {
                "type": Object {
                  "name": "text",
                },
              },
              "name": "navigate",
              "path": "newname",
            },
          ],
        },
        "b": Object {
          "context": Object {
            "type": Object {
              "name": "text",
            },
          },
          "name": "pipeline",
          "pipeline": Array [
            Object {
              "context": Object {
                "type": Object {
                  "name": "text",
                },
              },
              "name": "navigate",
              "path": "name",
            },
          ],
        },
      },
    },
  ],
}
`;

exports[`inferType() individual:define(nickname := name) 1`] = `
Object {
  "context": Object {
    "type": Object {
      "name": "seq",
      "type": Object {
        "entity": "individual",
        "name": "entity",
      },
    },
  },
  "name": "pipeline",
  "pipeline": Array [
    Object {
      "context": Object {
        "type": Object {
          "name": "seq",
          "type": Object {
            "entity": "individual",
            "name": "entity",
          },
        },
      },
      "name": "navigate",
      "path": "individual",
    },
    Object {
      "binding": Object {
        "name": "nickname",
        "query": Object {
          "context": Object {
            "type": Object {
              "name": "seq",
              "type": Object {
                "name": "text",
              },
            },
          },
          "name": "pipeline",
          "pipeline": Array [
            Object {
              "context": Object {
                "type": Object {
                  "name": "seq",
                  "type": Object {
                    "name": "text",
                  },
                },
              },
              "name": "navigate",
              "path": "name",
            },
          ],
        },
      },
      "context": Object {
        "type": Object {
          "name": "seq",
          "type": Object {
            "entity": "individual",
            "name": "entity",
          },
        },
      },
      "name": "define",
    },
  ],
}
`;

exports[`inferType() individual:define(nickname := name).nickname 1`] = `
Object {
  "context": Object {
    "type": Object {
      "name": "seq",
      "type": Object {
        "name": "text",
      },
    },
  },
  "name": "pipeline",
  "pipeline": Array [
    Object {
      "context": Object {
        "type": Object {
          "name": "seq",
          "type": Object {
            "entity": "individual",
            "name": "entity",
          },
        },
      },
      "name": "navigate",
      "path": "individual",
    },
    Object {
      "binding": Object {
        "name": "nickname",
        "query": Object {
          "context": Object {
            "type": Object {
              "name": "seq",
              "type": Object {
                "name": "text",
              },
            },
          },
          "name": "pipeline",
          "pipeline": Array [
            Object {
              "context": Object {
                "type": Object {
                  "name": "seq",
                  "type": Object {
                    "name": "text",
                  },
                },
              },
              "name": "navigate",
              "path": "name",
            },
          ],
        },
      },
      "context": Object {
        "type": Object {
          "name": "seq",
          "type": Object {
            "entity": "individual",
            "name": "entity",
          },
        },
      },
      "name": "define",
    },
    Object {
      "context": Object {
        "type": Object {
          "name": "seq",
          "type": Object {
            "name": "text",
          },
        },
      },
      "name": "navigate",
      "path": "nickname",
    },
  ],
}
`;

exports[`inferType() individual:define(nickname := name):select(nickname) 1`] = `
Object {
  "context": Object {
    "type": Object {
      "name": "seq",
      "type": Object {
        "fields": Object {
          "nickname": Object {
            "name": "text",
          },
        },
        "name": "record",
      },
    },
  },
  "name": "pipeline",
  "pipeline": Array [
    Object {
      "context": Object {
        "type": Object {
          "name": "seq",
          "type": Object {
            "entity": "individual",
            "name": "entity",
          },
        },
      },
      "name": "navigate",
      "path": "individual",
    },
    Object {
      "binding": Object {
        "name": "nickname",
        "query": Object {
          "context": Object {
            "type": Object {
              "name": "seq",
              "type": Object {
                "name": "text",
              },
            },
          },
          "name": "pipeline",
          "pipeline": Array [
            Object {
              "context": Object {
                "type": Object {
                  "name": "seq",
                  "type": Object {
                    "name": "text",
                  },
                },
              },
              "name": "navigate",
              "path": "name",
            },
          ],
        },
      },
      "context": Object {
        "type": Object {
          "name": "seq",
          "type": Object {
            "entity": "individual",
            "name": "entity",
          },
        },
      },
      "name": "define",
    },
    Object {
      "context": Object {
        "type": Object {
          "name": "seq",
          "type": Object {
            "fields": Object {
              "nickname": Object {
                "name": "text",
              },
            },
            "name": "record",
          },
        },
      },
      "name": "select",
      "select": Object {
        "nickname": Object {
          "context": Object {
            "type": Object {
              "name": "text",
            },
          },
          "name": "pipeline",
          "pipeline": Array [
            Object {
              "context": Object {
                "type": Object {
                  "name": "text",
                },
              },
              "name": "navigate",
              "path": "nickname",
            },
          ],
        },
      },
    },
  ],
}
`;

exports[`inferType() individual:define(nickname := name):select(nickname:select(code)) 1`] = `
Object {
  "context": Object {
    "type": Object {
      "name": "seq",
      "type": Object {
        "fields": Object {
          "nickname": Object {
            "fields": Object {
              "code": null,
            },
            "name": "record",
          },
        },
        "name": "record",
      },
    },
  },
  "name": "pipeline",
  "pipeline": Array [
    Object {
      "context": Object {
        "type": Object {
          "name": "seq",
          "type": Object {
            "entity": "individual",
            "name": "entity",
          },
        },
      },
      "name": "navigate",
      "path": "individual",
    },
    Object {
      "binding": Object {
        "name": "nickname",
        "query": Object {
          "context": Object {
            "type": Object {
              "name": "seq",
              "type": Object {
                "name": "text",
              },
            },
          },
          "name": "pipeline",
          "pipeline": Array [
            Object {
              "context": Object {
                "type": Object {
                  "name": "seq",
                  "type": Object {
                    "name": "text",
                  },
                },
              },
              "name": "navigate",
              "path": "name",
            },
          ],
        },
      },
      "context": Object {
        "type": Object {
          "name": "seq",
          "type": Object {
            "entity": "individual",
            "name": "entity",
          },
        },
      },
      "name": "define",
    },
    Object {
      "context": Object {
        "type": Object {
          "name": "seq",
          "type": Object {
            "fields": Object {
              "nickname": Object {
                "fields": Object {
                  "code": null,
                },
                "name": "record",
              },
            },
            "name": "record",
          },
        },
      },
      "name": "select",
      "select": Object {
        "nickname": Object {
          "context": Object {
            "type": Object {
              "fields": Object {
                "code": null,
              },
              "name": "record",
            },
          },
          "name": "pipeline",
          "pipeline": Array [
            Object {
              "context": Object {
                "type": Object {
                  "name": "text",
                },
              },
              "name": "navigate",
              "path": "nickname",
            },
            Object {
              "context": Object {
                "type": Object {
                  "fields": Object {
                    "code": null,
                  },
                  "name": "record",
                },
              },
              "name": "select",
              "select": Object {
                "code": Object {
                  "context": Object {
                    "type": null,
                  },
                  "name": "pipeline",
                  "pipeline": Array [
                    Object {
                      "context": Object {
                        "type": null,
                      },
                      "name": "navigate",
                      "path": "code",
                    },
                  ],
                },
              },
            },
          ],
        },
      },
    },
  ],
}
`;

exports[`inferType() individual:define(s := sample:count()):select(s:select(title)) 1`] = `
Object {
  "context": Object {
    "type": Object {
      "name": "seq",
      "type": Object {
        "fields": Object {
          "s": Object {
            "fields": Object {
              "title": null,
            },
            "name": "record",
          },
        },
        "name": "record",
      },
    },
  },
  "name": "pipeline",
  "pipeline": Array [
    Object {
      "context": Object {
        "type": Object {
          "name": "seq",
          "type": Object {
            "entity": "individual",
            "name": "entity",
          },
        },
      },
      "name": "navigate",
      "path": "individual",
    },
    Object {
      "binding": Object {
        "name": "s",
        "query": Object {
          "context": Object {
            "type": Object {
              "name": "number",
            },
          },
          "name": "pipeline",
          "pipeline": Array [
            Object {
              "context": Object {
                "type": Object {
                  "name": "seq",
                  "type": Object {
                    "entity": "sample",
                    "name": "entity",
                  },
                },
              },
              "name": "navigate",
              "path": "sample",
            },
            Object {
              "aggregate": "count",
              "context": Object {
                "type": Object {
                  "name": "number",
                },
              },
              "name": "aggregate",
            },
          ],
        },
      },
      "context": Object {
        "type": Object {
          "name": "seq",
          "type": Object {
            "entity": "individual",
            "name": "entity",
          },
        },
      },
      "name": "define",
    },
    Object {
      "context": Object {
        "type": Object {
          "name": "seq",
          "type": Object {
            "fields": Object {
              "s": Object {
                "fields": Object {
                  "title": null,
                },
                "name": "record",
              },
            },
            "name": "record",
          },
        },
      },
      "name": "select",
      "select": Object {
        "s": Object {
          "context": Object {
            "type": Object {
              "fields": Object {
                "title": null,
              },
              "name": "record",
            },
          },
          "name": "pipeline",
          "pipeline": Array [
            Object {
              "context": Object {
                "type": Object {
                  "name": "number",
                },
              },
              "name": "navigate",
              "path": "s",
            },
            Object {
              "context": Object {
                "type": Object {
                  "fields": Object {
                    "title": null,
                  },
                  "name": "record",
                },
              },
              "name": "select",
              "select": Object {
                "title": Object {
                  "context": Object {
                    "type": null,
                  },
                  "name": "pipeline",
                  "pipeline": Array [
                    Object {
                      "context": Object {
                        "type": null,
                      },
                      "name": "navigate",
                      "path": "title",
                    },
                  ],
                },
              },
            },
          ],
        },
      },
    },
  ],
}
`;

exports[`inferType() individual:select(a := age) 1`] = `
Object {
  "context": Object {
    "type": Object {
      "name": "seq",
      "type": Object {
        "fields": Object {
          "a": Object {
            "name": "opt",
            "type": Object {
              "name": "text",
            },
          },
        },
        "name": "record",
      },
    },
  },
  "name": "pipeline",
  "pipeline": Array [
    Object {
      "context": Object {
        "type": Object {
          "name": "seq",
          "type": Object {
            "entity": "individual",
            "name": "entity",
          },
        },
      },
      "name": "navigate",
      "path": "individual",
    },
    Object {
      "context": Object {
        "type": Object {
          "name": "seq",
          "type": Object {
            "fields": Object {
              "a": Object {
                "name": "opt",
                "type": Object {
                  "name": "text",
                },
              },
            },
            "name": "record",
          },
        },
      },
      "name": "select",
      "select": Object {
        "a": Object {
          "context": Object {
            "type": Object {
              "name": "opt",
              "type": Object {
                "name": "text",
              },
            },
          },
          "name": "navigate",
          "path": "age",
        },
      },
    },
  ],
}
`;

exports[`inferType() individual:select(a := name, b := name) 1`] = `
Object {
  "context": Object {
    "type": Object {
      "name": "seq",
      "type": Object {
        "fields": Object {
          "a": Object {
            "name": "text",
          },
          "b": Object {
            "name": "text",
          },
        },
        "name": "record",
      },
    },
  },
  "name": "pipeline",
  "pipeline": Array [
    Object {
      "context": Object {
        "type": Object {
          "name": "seq",
          "type": Object {
            "entity": "individual",
            "name": "entity",
          },
        },
      },
      "name": "navigate",
      "path": "individual",
    },
    Object {
      "context": Object {
        "type": Object {
          "name": "seq",
          "type": Object {
            "fields": Object {
              "a": Object {
                "name": "text",
              },
              "b": Object {
                "name": "text",
              },
            },
            "name": "record",
          },
        },
      },
      "name": "select",
      "select": Object {
        "a": Object {
          "context": Object {
            "type": Object {
              "name": "text",
            },
          },
          "name": "navigate",
          "path": "name",
        },
        "b": Object {
          "context": Object {
            "type": Object {
              "name": "text",
            },
          },
          "name": "navigate",
          "path": "name",
        },
      },
    },
  ],
}
`;

exports[`inferType() individual:select(a := name, b := name).a 1`] = `
Object {
  "context": Object {
    "type": Object {
      "name": "seq",
      "type": Object {
        "name": "text",
      },
    },
  },
  "name": "pipeline",
  "pipeline": Array [
    Object {
      "context": Object {
        "type": Object {
          "name": "seq",
          "type": Object {
            "entity": "individual",
            "name": "entity",
          },
        },
      },
      "name": "navigate",
      "path": "individual",
    },
    Object {
      "context": Object {
        "type": Object {
          "name": "seq",
          "type": Object {
            "fields": Object {
              "a": Object {
                "name": "text",
              },
              "b": Object {
                "name": "text",
              },
            },
            "name": "record",
          },
        },
      },
      "name": "select",
      "select": Object {
        "a": Object {
          "context": Object {
            "type": Object {
              "name": "text",
            },
          },
          "name": "navigate",
          "path": "name",
        },
        "b": Object {
          "context": Object {
            "type": Object {
              "name": "text",
            },
          },
          "name": "navigate",
          "path": "name",
        },
      },
    },
    Object {
      "context": Object {
        "type": Object {
          "name": "seq",
          "type": Object {
            "name": "text",
          },
        },
      },
      "name": "navigate",
      "path": "a",
    },
  ],
}
`;

exports[`inferType() individual:select(a := name, s := sample) 1`] = `
Object {
  "context": Object {
    "type": Object {
      "name": "seq",
      "type": Object {
        "fields": Object {
          "a": Object {
            "name": "text",
          },
          "s": Object {
            "name": "seq",
            "type": Object {
              "entity": "sample",
              "name": "entity",
            },
          },
        },
        "name": "record",
      },
    },
  },
  "name": "pipeline",
  "pipeline": Array [
    Object {
      "context": Object {
        "type": Object {
          "name": "seq",
          "type": Object {
            "entity": "individual",
            "name": "entity",
          },
        },
      },
      "name": "navigate",
      "path": "individual",
    },
    Object {
      "context": Object {
        "type": Object {
          "name": "seq",
          "type": Object {
            "fields": Object {
              "a": Object {
                "name": "text",
              },
              "s": Object {
                "name": "seq",
                "type": Object {
                  "entity": "sample",
                  "name": "entity",
                },
              },
            },
            "name": "record",
          },
        },
      },
      "name": "select",
      "select": Object {
        "a": Object {
          "context": Object {
            "type": Object {
              "name": "text",
            },
          },
          "name": "navigate",
          "path": "name",
        },
        "s": Object {
          "context": Object {
            "type": Object {
              "name": "seq",
              "type": Object {
                "entity": "sample",
                "name": "entity",
              },
            },
          },
          "name": "navigate",
          "path": "sample",
        },
      },
    },
  ],
}
`;

exports[`inferType() individual:select(a := name, s := sample.title) 1`] = `
Object {
  "context": Object {
    "type": Object {
      "name": "seq",
      "type": Object {
        "fields": Object {
          "a": Object {
            "name": "text",
          },
          "s": Object {
            "name": "seq",
            "type": Object {
              "name": "text",
            },
          },
        },
        "name": "record",
      },
    },
  },
  "name": "pipeline",
  "pipeline": Array [
    Object {
      "context": Object {
        "type": Object {
          "name": "seq",
          "type": Object {
            "entity": "individual",
            "name": "entity",
          },
        },
      },
      "name": "navigate",
      "path": "individual",
    },
    Object {
      "context": Object {
        "type": Object {
          "name": "seq",
          "type": Object {
            "fields": Object {
              "a": Object {
                "name": "text",
              },
              "s": Object {
                "name": "seq",
                "type": Object {
                  "name": "text",
                },
              },
            },
            "name": "record",
          },
        },
      },
      "name": "select",
      "select": Object {
        "a": Object {
          "context": Object {
            "type": Object {
              "name": "text",
            },
          },
          "name": "navigate",
          "path": "name",
        },
        "s": Object {
          "context": Object {
            "type": Object {
              "name": "seq",
              "type": Object {
                "name": "text",
              },
            },
          },
          "name": "pipeline",
          "pipeline": Array [
            Object {
              "context": Object {
                "type": Object {
                  "name": "seq",
                  "type": Object {
                    "entity": "sample",
                    "name": "entity",
                  },
                },
              },
              "name": "navigate",
              "path": "sample",
            },
            Object {
              "context": Object {
                "type": Object {
                  "name": "seq",
                  "type": Object {
                    "name": "text",
                  },
                },
              },
              "name": "navigate",
              "path": "title",
            },
          ],
        },
      },
    },
  ],
}
`;

exports[`inferType() individual:select(a := name, s := sample:count()) 1`] = `
Object {
  "context": Object {
    "type": Object {
      "name": "seq",
      "type": Object {
        "fields": Object {
          "a": Object {
            "name": "text",
          },
          "s": Object {
            "name": "number",
          },
        },
        "name": "record",
      },
    },
  },
  "name": "pipeline",
  "pipeline": Array [
    Object {
      "context": Object {
        "type": Object {
          "name": "seq",
          "type": Object {
            "entity": "individual",
            "name": "entity",
          },
        },
      },
      "name": "navigate",
      "path": "individual",
    },
    Object {
      "context": Object {
        "type": Object {
          "name": "seq",
          "type": Object {
            "fields": Object {
              "a": Object {
                "name": "text",
              },
              "s": Object {
                "name": "number",
              },
            },
            "name": "record",
          },
        },
      },
      "name": "select",
      "select": Object {
        "a": Object {
          "context": Object {
            "type": Object {
              "name": "text",
            },
          },
          "name": "navigate",
          "path": "name",
        },
        "s": Object {
          "context": Object {
            "type": Object {
              "name": "number",
            },
          },
          "name": "pipeline",
          "pipeline": Array [
            Object {
              "context": Object {
                "type": Object {
                  "name": "seq",
                  "type": Object {
                    "entity": "sample",
                    "name": "entity",
                  },
                },
              },
              "name": "navigate",
              "path": "sample",
            },
            Object {
              "aggregate": "count",
              "context": Object {
                "type": Object {
                  "name": "number",
                },
              },
              "name": "aggregate",
            },
          ],
        },
      },
    },
  ],
}
`;

exports[`inferType() individual:unknown() : fails on unknown aggregate 1`] = `
Object {
  "context": Object {
    "type": null,
  },
  "name": "pipeline",
  "pipeline": Array [
    Object {
      "context": Object {
        "type": Object {
          "name": "seq",
          "type": Object {
            "entity": "individual",
            "name": "entity",
          },
        },
      },
      "name": "navigate",
      "path": "individual",
    },
    Object {
      "aggregate": "unknown",
      "context": Object {
        "type": null,
      },
      "name": "aggregate",
    },
  ],
}
`;
